--- a/src/assets/stylesheets/projects.scss
+++ b/src/assets/stylesheets/projects.scss
@@ -11,7 +11,6 @@
   align-items: center;
   overflow: visible;
   overflow-y: scroll;
-  overflow-x: hidden;
 }
 
 .projects-content {
@@ -24,7 +23,6 @@
   margin-top: 20px;
   overflow: visible;
   overflow-y: scroll;
-  overflow-x: hidden;
   margin-top: 30px;
   padding-bottom: 100px;
 }
